# soulVerseApi

./: .env.template  .gitignore  CREDENTIALS_SETUP.md  NOTIFICATION_SYSTEM_README.md  pyproject.toml  run_server.py  test_ameliorations.py  test_notifications.py
docs/: RESUME_AMELIORATIONS.md  ameliorations-reflexions-images.md  architecture-technique.md  command.md  corrections-verse-null-summary.md  docs1-pdf.md  docsPdf.md  firebase-notifications-fix.md  gemini-migration.md  image-errors-resolution.md  image-generation-system.md  scheduler-service.md  verse-null-fix.md
scripts/: dev.py  prod.py
src/soul_verse_api/: main.py
src/soul_verse_api/api/: deps.py
src/soul_verse_api/api/v1/: __init__.py  prayers.py  scheduler.py  user.py  verses.py
src/soul_verse_api/core/: config.py  notification_client.py  redis_client.py
src/soul_verse_api/database/: session.py
src/soul_verse_api/models/: Models.py
src/soul_verse_api/schemas/: user_schemas.py  verse_schema.py
src/soul_verse_api/services/: bible_service.py  gemini_service.py  image_generation_service.py  redis_service.py  scheduler_service.py
src/soul_verse_api/utils/: functions.py
